feat: implement movie search and filter functionality
- Add movie search with title, genre, and status filters
- Implement pagination for movie listings
- Add MovieSearchRequest DTO and MovieSpecification for dynamic queries
- Update MovieController with search endpoints
- Enhance frontend with FilterPanel and Pagination components
- Add MoviesPage component for dedicated movie browsing
- Update MovieCard and SearchResultsPage with improved UI
- Add skeleton loading states for better UX
- Implement debounced search functionality